# miqrophi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
docs/: cif_to_surface_lattice.md  lattice_matching_theory.md  usage_guide.md
examples/: 0000[Co][sql]2[ASR]2.cif  HKUST-1.cif
miqrocal/: __init__.py  batch.py  cif_parser.py  cli.py  lattice.py  level0.py  level1.py  level2.py  matcher.py  visualize.py
miqrophi/: __init__.py  batch.py  cif_parser.py  cli.py  coincidence.py  discriminant.py  lattice.py  matcher.py  mcp_server.py  supercell.py  visualize.py
tests/: test_batch.py  test_cif_parser.py  test_cli.py  test_coincidence.py  test_discriminant.py  test_lattice.py  test_level0.py  test_matcher.py  test_mcp_server.py  test_supercell.py  test_supercell_internals.py  test_visualize.py
