[build-system]
requires      = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "miqrocal"
version         = "0.3.0"
description     = "2D epitaxial lattice matching via three-level hierarchical screening"
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.10"

keywords = [
    "epitaxy", "lattice matching", "MOF", "surface science",
    "crystallography", "LLL", "reciprocal space",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
miqrocal = "miqrocal.cli:main"

[project.urls]
Repository    = "https://github.com/lichman0405/miqrophi"
Documentation = "https://github.com/lichman0405/miqrophi/blob/main/docs/lattice_matching_theory.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["miqrocal*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
